Supermatter Engine (Port from White Dream)

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -109,6 +109,7 @@
   - type: BypassInteractionChecks
   - type: ExplosionResistance
     damageCoefficient: 0
+  - type: BkmSupermatterImmune # supermatter
 
 - type: entity
   abstract: true
