--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -138,6 +138,7 @@
     solution: food
   - type: Extractable
     grindableSolutionName: food
+  - type: BkmSupermatterImmune
 
 - type: entity
   parent: Ash
