--- a/Content.Shared/Content.Shared.csproj
+++ b/Content.Shared/Content.Shared.csproj
@@ -23,6 +23,26 @@
       <Private>false</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Power\Components\" />
+  </ItemGroup>
+  <ItemGroup> <!-- Backmen Supermatter start -->
+    <Compile Update="Backmen\Supermatter\Components\BkmSupermatterComponent.calculation.cs">
+      <DependentUpon>BkmSupermatterComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Backmen\Supermatter\Components\BkmSupermatterComponent.delamm.cs">
+      <DependentUpon>BkmSupermatterComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Backmen\Supermatter\Components\BkmSupermatterComponent.sound.cs">
+      <DependentUpon>BkmSupermatterComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Backmen\Supermatter\Components\BkmSupermatterComponent.threshold.cs">
+      <DependentUpon>BkmSupermatterComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Backmen\Supermatter\Components\BkmSupermatterComponent.timer.cs">
+      <DependentUpon>BkmSupermatterComponent.cs</DependentUpon>
+    </Compile>
+  </ItemGroup> <!-- Backmen Supermatter end -->
   <Import Project="..\RobustToolbox\MSBuild\Robust.Properties.targets" />
   <Import Project="..\RobustToolbox\MSBuild\Robust.CompNetworkGenerator.targets" />
 </Project>
