[PORT] настольные компьютеры залетают в игру! (#1046)
* Update computer.yml

* codepart

* proto

* textures

* fix

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -40,6 +40,8 @@
       state: cpu_engineering
     - type: ComputerBoard
       prototype: ComputerAtmosMonitoring
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopAlert # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -51,6 +53,8 @@
       state: cpu_engineering
     - type: ComputerBoard
       prototype: ComputerPowerMonitoring
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopPowerMonitoring # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -62,6 +66,8 @@
       state: cpu_medical
     - type: ComputerBoard
       prototype: ComputerMedicalRecords
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopMedicalRecords # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -73,6 +79,8 @@
       state: cpu_security
     - type: ComputerBoard
       prototype: ComputerCriminalRecords
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopCriminalRecords # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -84,6 +92,8 @@
       state: cpu_command
     - type: ComputerBoard
       prototype: ComputerStationRecords
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopStationRecords # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -186,6 +196,8 @@
       state: cpu_supply
     - type: ComputerBoard
       prototype: ComputerPalletConsole
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopCargoOrders # Frontier
 
 - type: entity
   id: CargoBountyComputerCircuitboard
@@ -198,6 +210,8 @@
   - type: ComputerBoard
     prototype: ComputerCargoBounty
   - type: StaticPrice
+  - type: ComputerTabletopBoard # Frontier
+    prototype: ComputerTabletopCargoBounty # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -222,6 +236,8 @@
       prototype: ComputerSalvageExpedition
     - type: StealTarget
       stealGroup: SalvageExpeditionsComputerCircuitboard
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopSalvageExpedition # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -235,6 +251,8 @@
     prototype: ComputerShuttleCargo
   - type: StealTarget
     stealGroup: CargoShuttleConsoleCircuitboard
+  - type: ComputerTabletopBoard # Frontier
+    prototype: ComputerTabletopCargoBounty # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -272,6 +290,8 @@
     - type: Tag
       tags:
         - ComputerTelevisionCircuitboard
+#    - type: ComputerTabletopBoard # Frontier
+#      prototype: ComputerTabletopTelevision # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -283,6 +303,8 @@
       state: cpu_science
     - type: ComputerBoard
       prototype: ComputerResearchAndDevelopment
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopResearchAndDevelopment # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -294,6 +316,8 @@
       state: cpu_science
     - type: ComputerBoard
       prototype: ComputerAnalysisConsole
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopAnalysisConsole # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -332,6 +356,8 @@
     - type: Tag
       tags:
       - HighRiskItem
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopId # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -343,6 +369,8 @@
       state: cpu_medical
     - type: ComputerBoard
       prototype: computerBodyScanner
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopBodyScanner # Frontier
 
 - type: entity
   parent: [ BaseComputerCircuitboard, BaseCommandContraband ]
@@ -354,6 +382,8 @@
       state: cpu_command
     - type: ComputerBoard
       prototype: ComputerComms
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopComms # Frontier
 
 - type: entity
   parent: [ BaseComputerCircuitboard, BaseSyndicateContraband ]
@@ -397,6 +427,8 @@
     state: cpu_supply
   - type: ComputerBoard
     prototype: ComputerRadar
+  - type: ComputerTabletopBoard # Frontier
+    prototype: ComputerTabletopRadar # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -408,6 +440,8 @@
       state: cpu_engineering
     - type: ComputerBoard
       prototype: ComputerSolarControl
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopSolarControl # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -470,6 +504,8 @@
       state: cpu_medical
     - type: ComputerBoard
       prototype: ComputerCloningConsole
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopCloningConsole # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -505,6 +541,8 @@
       price: 150
     - type: ComputerBoard
       prototype: ComputerMassMedia
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopMassMedia # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
