--- a/Resources/Prototypes/_Backmen/Recipes/Construction/machines.yml
+++ b/Resources/Prototypes/_Backmen/Recipes/Construction/machines.yml
@@ -6,3 +6,5 @@
   category: construction-category-machines
   placementMode: SnapgridCenter
   canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
