--- a/Resources/Prototypes/AlertLevels/alert_levels.yml
+++ b/Resources/Prototypes/AlertLevels/alert_levels.yml
@@ -1,36 +1,54 @@
+#backmen start
+---
 - type: alertLevels
   id: stationAlerts
   defaultLevel: green
   levels:
     green:
       announcement: alert-level-green-announcement
+      sound: /Audio/Misc/greenalert.ogg
       color: Green
       emergencyLightColor: LawnGreen
       shuttleTime: 600
     blue:
       announcement: alert-level-blue-announcement
-      sound: /Audio/Misc/bluealert.ogg
+      sound:
+        path: /Audio/Misc/bluealert.ogg
+        params:
+          volume: -2
       color: DodgerBlue
-      forceEnableEmergencyLights: true
       emergencyLightColor: DodgerBlue
       shuttleTime: 600
     violet:
       announcement: alert-level-violet-announcement
-      sound: /Audio/Misc/notice1.ogg
+      sound: /Audio/Backmen/Misc/new-style-alerts/purple_code_new_style.ogg
       color: Violet
       emergencyLightColor: Violet
       forceEnableEmergencyLights: true
       shuttleTime: 600
     yellow:
       announcement: alert-level-yellow-announcement
-      sound: /Audio/Misc/notice1.ogg
+      sound: /Audio/Backmen/Misc/new-style-alerts/yellow_code_new_style.ogg
       color: Yellow
       emergencyLightColor: Goldenrod
       forceEnableEmergencyLights: true
       shuttleTime: 600
+    amber:
+      announcement: alert-level-amber-announcement
+      sound:
+        path: /Audio/Backmen/Misc/new-style-alerts/amber_code_new_style.ogg
+        params:
+          volume: -2
+      color: Orange
+      emergencyLightColor: Orange
+      forceEnableEmergencyLights: true
+      shuttleTime: 600
     red:
       announcement: alert-level-red-announcement
-      sound: /Audio/Misc/redalert.ogg
+      sound:
+        path: /Audio/Misc/redalert.ogg
+        params:
+          volume: -2
       color: Red
       emergencyLightColor: Red
       forceEnableEmergencyLights: true
@@ -39,9 +57,9 @@
       announcement: alert-level-gamma-announcement
       selectable: false
       sound:
-        path: /Audio/Misc/gamma.ogg
+        path: /Audio/Corvax/Misc/siren.ogg # Corvax: Return of the old siren sound
         params:
-          volume: -2
+          volume: -4
       disableSelection: true
       color: PaleVioletRed
       emergencyLightColor: PaleVioletRed
@@ -52,7 +70,7 @@
       sound:
         path: /Audio/Misc/delta.ogg
         params:
-          volume: -3
+          volume: -4
       disableSelection: true
       color: DarkRed
       emergencyLightColor: Orange
@@ -70,3 +88,23 @@
       emergencyLightColor: DarkViolet
       forceEnableEmergencyLights: true
       shuttleTime: 1200
+    sigma:
+      announcement: alert-level-sigma-announcement
+      selectable: false
+      sound: /Audio/Backmen/Misc/new-style-alerts/sigma_code_new_style.ogg
+      disableSelection: true
+      color: Pink
+      emergencyLightColor: Aqua
+      forceEnableEmergencyLights: true
+      shuttleTime: 1200
+    white:
+      announcement: alert-level-white-announcement
+      sound:
+        path: /Audio/Backmen/Misc/new-style-alerts/white_code_new_style.ogg
+        params:
+          volume: -2
+      color: White
+      emergencyLightColor: White
+      forceEnableEmergencyLights: true
+      shuttleTime: 600
+#backmen end
