language for demons

--- a/Resources/Prototypes/_Erida/Entities/Mobs/Species/demon.yml
+++ b/Resources/Prototypes/_Erida/Entities/Mobs/Species/demon.yml
@@ -51,6 +51,15 @@
       types:
         Heat : 0.3 #per second, scales with temperature & other constants
   - type: Perishable
+  - type: LanguageSpeaker
+    currentLanguage: TauCetiBasic
+  - type: LanguageKnowledge #backmen: languages
+    speaks:
+    - TauCetiBasic
+    - Demonic
+    understands:
+    - TauCetiBasic
+    - Demonic
 
 - type: entity
   parent: BaseSpeciesDummy
