Language for Anthro

--- a/Resources/Prototypes/_Ataraxia/Entities/Mobs/Species/anthropomorph.yml
+++ b/Resources/Prototypes/_Ataraxia/Entities/Mobs/Species/anthropomorph.yml
@@ -61,7 +61,9 @@
   - type: LanguageKnowledge #backmen: languages
     speaks:
     - TauCetiBasic
+    - Canilunzt
     understands:
+    - Canilunzt
     - TauCetiBasic
 
 - type: entity
