--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -40,6 +40,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: MaleDeathGasp
+    Moan:
+      collection: MaleMoan
 
 - type: emoteSounds
   id: FemaleHuman
@@ -82,6 +84,8 @@
       collection: FemaleGasp
     DefaultDeathgasp:
       collection: FemaleDeathGasp
+    Moan:
+      collection: FemaleMoan
 
 - type: emoteSounds
   id: MaleReptilian
@@ -106,6 +110,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: DeathGasp
+    Moan:
+      collection: MaleMoan
 
 - type: emoteSounds
   id: FemaleReptilian
@@ -130,6 +136,8 @@
       collection: FemaleGasp
     DefaultDeathgasp:
       collection: FemaleDeathGasp
+    Moan:
+      collection: FemaleMoan
 
 - type: emoteSounds
   id: MaleSlime
@@ -172,6 +180,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: MaleDeathGasp
+    Moan:
+      collection: MaleMoan
   params:
     variation: 0.125
 
@@ -216,6 +226,8 @@
       collection: FemaleGasp
     DefaultDeathgasp:
       collection: FemaleDeathGasp
+    Moan:
+      collection: FemaleMoan
   params:
     variation: 0.125
 
@@ -321,6 +333,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: MaleDeathGasp
+    Moan:
+      collection: MaleMoan
   params:
     variation: 0.125
     pitch: 0.75
@@ -364,6 +378,8 @@
       collection: FemaleGasp
     DefaultDeathgasp:
       collection: FemaleDeathGasp
+    Moan:
+      collection: FemaleMoan
   params:
     variation: 0.125
     pitch: 0.75
@@ -393,6 +409,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: MothDeathGasp
+    Moan:
+      collection: MaleMoan
 
 - type: emoteSounds
   id: UnisexSilicon
