--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
@@ -20,7 +20,6 @@
     - state: closed_unlit
       shader: unshaded
       map: ["enum.DoorVisualLayers.BaseUnlit"]
-      visible: false
     - state: welded
       map: ["enum.WeldableLayers.BaseWelded"]
     - state: bolted_unlit
@@ -79,6 +78,7 @@
     fuel: 5
     time: 3
   - type: Airlock
+    openUnlitVisible: true # Erida
   - type: NavMapDoor
   - type: DoorBolt
   - type: Appearance
