--- a/Resources/Prototypes/Recipes/Lathes/Packs/engineering.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/engineering.yml
@@ -76,6 +76,10 @@
 - type: latheRecipePack
   id: EngineeringBoards
   recipes:
+  # ERIDA-start
+  - TinyFanCircuitboard
+  - TinyFanDirectionalCircuitboard
+  # ERIDA-end
   - ThermomachineFreezerMachineCircuitBoard
   - HellfireFreezerMachineCircuitBoard
   - PortableScrubberMachineCircuitBoard
