--- a/Resources/Prototypes/Maps/box.yml
+++ b/Resources/Prototypes/Maps/box.yml
@@ -2,7 +2,7 @@
   id: Box
   mapName: 'Box Station'
   mapPath: /Maps/box.yml
-  minPlayers: 50
+  minPlayers: 10
   stations:
     Boxstation:
       stationProto: StandardNanotrasenStation
@@ -52,6 +52,7 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 4 ] #intern, exclude from dept count
             Lawyer: [ 2, 2 ]
+            BlueShield: [1, 1] # ERIDA
             #Supply (6)
             SalvageSpecialist: [ 3, 3 ]
             CargoTechnician: [ 3, 3 ]
