--- a/Resources/Prototypes/Entities/Mobs/Player/observer.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/observer.yml
@@ -63,6 +63,7 @@
   - type: Tag
     tags:
     - BypassInteractionRangeChecks
+  - type: UniversalLanguageSpeaker
   - type: PointLight
     netsync: false
     radius: 6
