--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -219,7 +219,7 @@
       startValue: 0.1
       endValue: 2.0
       isLooped: true
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
   - type: PointLight
     enabled: false
