--- a/Resources/Prototypes/Entities/Clothing/Head/base_clothinghead.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/base_clothinghead.yml
@@ -62,7 +62,7 @@
   - type: Item
     heldPrefix: off
     size: Normal
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
   - type: ItemTogglePointLight
   - type: PointLight
@@ -209,7 +209,7 @@
       map: [ "light" ]
   - type: Clothing
     equippedPrefix: off
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
   - type: ItemTogglePointLight
   - type: PointLight
