--- a/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
@@ -82,7 +82,7 @@
     sprite: Clothing/Head/Hardsuits/paramedhelm.rsi
   - type: HandheldLight
     addPrefix: false
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
     clothingVisuals:
       head:
