--- a/Resources/Prototypes/Entities/Clothing/Multiple/misc.yml
+++ b/Resources/Prototypes/Entities/Clothing/Multiple/misc.yml
@@ -8,7 +8,7 @@
     sprite: Clothing/Multiple/headphones.rsi
     layers:
     - state: icon
-      map: [ "enum.ToggleVisuals.Layer" ]
+      map: [ "enum.ToggleableVisuals.Layer" ]
   - type: Clothing
     equippedPrefix: off
     sprite: Clothing/Multiple/headphones.rsi
@@ -16,8 +16,8 @@
     - HEAD
     - EARS
     - NECK
-  - type: ToggleVisuals
-    spriteLayer: enum.ToggleVisuals.Layer
+  - type: ToggleableVisuals
+    spriteLayer: enum.ToggleableVisuals.Layer
     clothingVisuals:
       head:
       - state: on-equipped-HELMET
@@ -28,8 +28,8 @@
   - type: Appearance
   - type: GenericVisualizer
     visuals:
-      enum.ToggleVisuals.Toggled:
-        enum.ToggleVisuals.Layer:
+      enum.ToggleableVisuals.Enabled:
+        enum.ToggleableVisuals.Layer:
           True: {state: icon-on}
           False: {state: icon}
   - type: ItemToggle
