--- a/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
@@ -45,7 +45,7 @@
     radius: 3
     energy: 2
     netsync: false
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
   - type: ItemTogglePointLight
   - type: Appearance
