--- a/Resources/Prototypes/Entities/Objects/Specific/Salvage/scanner.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Salvage/scanner.yml
@@ -12,7 +12,7 @@
     - state: icon-o
       shader: unshaded
       visible: false
-      map: ["enum.ToggleVisuals.Layer"]
+      map: ["enum.ToggleableVisuals.Layer"]
   - type: Item
     inhandVisuals:
       left:
@@ -28,8 +28,8 @@
   - type: Appearance
   - type: GenericVisualizer
     visuals:
-      enum.ToggleVisuals.Toggled:
-        enum.ToggleVisuals.Layer:
+      enum.ToggleableVisuals.Enabled:
+        enum.ToggleableVisuals.Layer:
           True: { visible: true }
           False: { visible: false }
   - type: ItemToggle
@@ -72,7 +72,7 @@
     - state: adv-o
       shader: unshaded
       visible: false
-      map: ["enum.ToggleVisuals.Layer"]
+      map: ["enum.ToggleableVisuals.Layer"]
   - type: Item
     storedRotation: -90
     inhandVisuals:
