--- a/Resources/Prototypes/Entities/Objects/Tools/decoys.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/decoys.yml
@@ -36,7 +36,7 @@
     nameFormat: name-format-nukie-generic
   - type: Damageable
     damageContainer: Inorganic
-  - type: ToggleVisuals
+  - type: ToggleableVisuals
     spriteLayer: light
   - type: ItemTogglePointLight
   - type: Foldable
