--- a/Resources/Prototypes/Entities/Objects/Tools/lantern.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/lantern.yml
@@ -44,7 +44,7 @@
       color: "#FFC458"
       netsync: false
     - type: Appearance
-    - type: ToggleVisuals
+    - type: ToggleableVisuals
       spriteLayer: light
     - type: ItemTogglePointLight
     - type: PowerCellSlot
