--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Launchers/launchers.yml
@@ -228,7 +228,7 @@
           map: [ "unshaded" ]
           shader: unshaded
           visible: false
-    - type: ToggleVisuals
+    - type: ToggleableVisuals
       spriteLayer: unshaded
       inhandVisuals:
         left:
@@ -276,7 +276,7 @@
           map: [ "unshaded" ]
           shader: unshaded
           visible: false
-        - type: ToggleVisuals
+        - type: ToggleableVisuals
           spriteLayer: unshaded
           inhandVisuals:
             left:
@@ -356,7 +356,7 @@
           map: [ "unshaded" ]
           shader: unshaded
           visible: false
-    - type: ToggleVisuals
+    - type: ToggleableVisuals
       spriteLayer: unshaded
       inhandVisuals:
         left:
@@ -400,7 +400,7 @@
           map: [ "unshaded" ]
           shader: unshaded
           visible: false
-    - type: ToggleVisuals
+    - type: ToggleableVisuals
       spriteLayer: unshaded
       inhandVisuals:
         left:
