--- a/Resources/Prototypes/_Erida/Catalog/JukeBox/Standart.yml
+++ b/Resources/Prototypes/_Erida/Catalog/JukeBox/Standart.yml
@@ -15,3 +15,33 @@
   name: Pyrokinesis - Легенда о Богине Гроз
   path:
     path: /Audio/_Erida/Jukebox/Pyrokinesis/pyrokinesis_god_legend.ogg
+
+- type: jukebox
+  id: Franz40
+  name: Franz Ferdinand - 40
+  path:
+    path: /Audio/_Erida/Jukebox/Franz_Ferdinand/Franz_Ferdinand_40.ogg
+
+- type: jukebox
+  id: TakeMeOut
+  name: Franz Ferdinand - Take Me Out
+  path:
+    path: /Audio/_Erida/Jukebox/Franz_Ferdinand/Franz_Ferdinand_Take_Me_Out.ogg
+
+- type: jukebox
+  id: ThisFfire
+  name: Franz Ferdinand - This Ffire
+  path:
+    path: /Audio/_Erida/Jukebox/Franz_Ferdinand/Franz_Ferdinand_This_Ffire.ogg
+
+- type: jukebox
+  id: Kapital
+  name: Ляпис Трубецкой - Капитал
+  path:
+    path: /Audio/_Erida/Jukebox/Lyapis_Trubeckojj/Lyapis_Trubeckojj_Kapital.ogg
+
+- type: jukebox
+  id: YourBalcony
+  name: Перемотка - Твоего балкона свет
+  path:
+    path: /Audio/_Erida/Jukebox/Peremotka/Peremotka_Tvoego_balkona.ogg
