Survival box for all species

--- a/Resources/Prototypes/Loadouts/Miscellaneous/survival.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/survival.yml
@@ -20,6 +20,9 @@
     - Reptilian
      #backmen-species-start
     - Felinid
+    - Anthropomorph
+    - Demon
+    - Shark
     #backmen-species-end
 
 - type: loadoutEffectGroup
