--- a/Resources/Prototypes/_Ataraxia/Entities/Mobs/Customization/Markings/taur.yml
+++ b/Resources/Prototypes/_Ataraxia/Entities/Mobs/Customization/Markings/taur.yml
@@ -25,7 +25,7 @@
   bodyPart: Tail
   markingCategory: Tail
   sponsorOnly: true
-  speciesRestriction: [Anthropomorph, Human]
+  speciesRestriction: [Anthropomorph]
   sprites:
     - sprite: _Ataraxia/Mobs/Customization/taur.rsi
       state: taur_deer
@@ -49,7 +49,7 @@
   bodyPart: Tail
   markingCategory: Tail
   sponsorOnly: true
-  speciesRestriction: [Anthropomorph, Human, Arachnid]
+  speciesRestriction: [Anthropomorph, Arachnid]
   sprites:
     - sprite: _Ataraxia/Mobs/Customization/taur.rsi
       state: taur_drider
@@ -83,7 +83,7 @@
   bodyPart: Tail
   markingCategory: Tail
   sponsorOnly: true
-  speciesRestriction: [Anthropomorph, Human]
+  speciesRestriction: [Anthropomorph]
   sprites:
     - sprite: _Ataraxia/Mobs/Customization/taur.rsi
       state: taur_horse
@@ -111,7 +111,7 @@
   id: TaurNaga
   bodyPart: Tail
   markingCategory: Tail
-  speciesRestriction: [Anthropomorph, Reptilian, Human]
+  speciesRestriction: [Anthropomorph, Reptilian]
   sprites:
     - sprite: _Ataraxia/Mobs/Customization/taur.rsi
       state: taur_naga
@@ -153,7 +153,7 @@
   bodyPart: Tail
   markingCategory: Tail
   sponsorOnly: true
-  speciesRestriction: [Anthropomorph, Human]
+  speciesRestriction: [Anthropomorph]
   sprites:
     - sprite: _Ataraxia/Mobs/Customization/taur.rsi
       state: taur_tentacle
