--- a/Resources/Prototypes/_Erida/Entities/Mobs/Customization/Markings/headaugs.yml
+++ b/Resources/Prototypes/_Erida/Entities/Mobs/Customization/Markings/headaugs.yml
@@ -2,6 +2,7 @@
   id: Malstrem
   bodyPart: Eyes
   markingCategory: Head
+  speciesRestriction: [Demon]
   coloring:
     default:
       type:
@@ -15,6 +16,7 @@
   id: Beholder
   bodyPart: Eyes
   markingCategory: Head
+  speciesRestriction: [Demon]
   coloring:
     default:
       type:
@@ -28,6 +30,7 @@
   id: Terminator
   bodyPart: Eyes
   markingCategory: Head
+  speciesRestriction: [Demon]
   coloring:
     default:
       type:
@@ -41,6 +44,7 @@
   id: Iron_jaw
   bodyPart: Eyes
   markingCategory: Head
+  speciesRestriction: [Demon]
   coloring:
     default:
       type:
