--- a/Resources/Prototypes/Species/human.yml
+++ b/Resources/Prototypes/Species/human.yml
@@ -25,6 +25,7 @@
     UndergarmentTop: MobHumanoidAnyMarking
     UndergarmentBottom: MobHumanoidAnyMarking
     Tail: MobHumanoidAnyMarking # Erida
+    HeadSide: MobHumanoidAnyMarking # Erida
     Chest: MobHumanTorso
     Eyes: MobHumanoidEyes
     HeadTop: MobHumanoidAnyMarking
@@ -53,6 +54,9 @@
       points: 1
       required: false
     Tail: # the cat tail joke
+      points: 1
+      required: false
+    HeadSide: # ERIDA
       points: 1
       required: false
     HeadTop:
