--- a/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
@@ -59,3 +59,17 @@
         amount: 1
       - id: ClothingOuterCoatJensen
       - id: ClothingHandsGlovesColorBlack
+
+- type: entity
+  id: BriefcaseIAAFilled
+  parent: BriefcaseBrown
+  suffix: IAA
+  components:
+    - type: Item
+      sprite: Objects/Storage/Briefcases/briefcase_brown.rsi
+      size: Huge
+    - type: StorageFill
+      contents:
+        - id: Paper
+        - id: PenCentcom
+        - id: RubberStampIAA
