--- a/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
@@ -314,3 +314,16 @@
     stampState: "paper_stamp-wizard"
   - type: Sprite
     state: stamp-wizard
+
+- type: entity
+  name: internal affairs agent's rubber stamp
+  parent: RubberStampBase
+  id: RubberStampIAA
+  suffix: DO NOT MAP
+  components:
+    - type: Stamp
+      stampedName: stamp-component-stamped-name-iaa
+      stampedColor: "#33CC33"
+      stampState: "paper_stamp-ok"
+    - type: Sprite
+      state: stamp-ok
