--- a/Resources/Prototypes/StatusIcon/job.yml
+++ b/Resources/Prototypes/StatusIcon/job.yml
@@ -455,6 +455,14 @@
 
 - type: jobIcon
   parent: JobIcon
+  id: JobIconIAA
+  icon:
+    sprite: /Textures/Interface/Misc/job_icons.rsi
+    state: IAA
+  jobName: job-name-iaa
+
+- type: jobIcon
+  parent: JobIcon
   id: JobIconAdmin
   icon:
     sprite: /Textures/Interface/Misc/job_icons.rsi
