Адвокат переименован в юриста

--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -895,6 +895,6 @@
           color: "#1b67a5"
         - state: frame_head # Backmen
           color: "#1b67a5"
-        - state: idiaa
+        # - state: idiaa
     - type: PresetIdCard
       job: IAA
