--- a/Resources/Prototypes/Maps/elkridge.yml
+++ b/Resources/Prototypes/Maps/elkridge.yml
@@ -55,6 +55,7 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 2 ] #intern, not counted
             Lawyer: [ 1, 1 ]
+            IAA: [ 0, 1 ]
             #supply (4 - 5)
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 3 ]
