--- a/Resources/Prototypes/Maps/marathon.yml
+++ b/Resources/Prototypes/Maps/marathon.yml
@@ -52,6 +52,7 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 4, 4 ] #intern, not counted
             Lawyer: [ 2, 2 ]
+            IAA: [ 0, 1 ] 
             BlueShield: [1, 1] # ERIDA
             #supply (6)
             SalvageSpecialist: [ 3, 3 ]
