--- a/Resources/Prototypes/Maps/plasma.yml
+++ b/Resources/Prototypes/Maps/plasma.yml
@@ -55,6 +55,7 @@
             Detective: [ 1, 2 ] #good cop, bad cop
             SecurityCadet: [ 4, 4 ] #intern, not counted
             Lawyer: [ 1, 2 ]
+            IAA: [ 0, 1 ]
             #supply (8 - 10)
             SalvageSpecialist: [ 4, 4 ] #the salvagers yearn for the mines
             CargoTechnician: [ 4, 6 ]
